Elevate redirection to a warning tagged http-redirected
Include the HTTP status code and reason in the message.

--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -2,6 +2,7 @@
 
 Changes:
 - Minimum Python version required is 3.8
+- HTTP redirect causes a warning, http-redirected
 
 
 10.2.1 (released 05.12.2022)
