Update list of distributions

--- a/doc/install.txt
+++ b/doc/install.txt
@@ -74,7 +74,7 @@ https://pip.pypa.io/en/stable/installation/
 
 Setup for GNU/Linux
 -------------------
-On all major Linux distributions (Debian, Mandriva, Redhat, Suse, Ubuntu),
+On major Linux distributions (Debian, Gentoo, Fedora, Ubuntu),
 the ``linkchecker`` package is available for installation.
 To install the latest LinkChecker pip_ will be available, often as a package
 e.g. ``python3-pip``, a pipx_ package may also be found e.g. ``pipx``.
