Update man pages

--- a/doc/man/en/linkchecker.1
+++ b/doc/man/en/linkchecker.1
@@ -27,7 +27,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.TH "LINKCHECKER" "1" "September 11, 2023" "10.2.1.post89+g3a276cfc8" "LinkChecker"
+.TH "LINKCHECKER" "1" "December 04, 2023" "10.3.0.post33+g268799ee0" "LinkChecker"
 .SH NAME
 linkchecker \- command line client to check HTML documents and websites for broken links
 .SH SYNOPSIS
@@ -217,7 +217,8 @@ your locale. Valid encodings are listed at
 .INDENT 0.0
 .TP
 .B \-v, \-\-verbose
-Log all checked URLs. Default is to log only errors and warnings.
+Log all checked URLs, overriding \fI\%\-\-no\-warnings\fP\&.
+Default is to log only errors and warnings.
 .UNINDENT
 .SS Progress updates
 .INDENT 0.0
