--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -27,7 +27,7 @@ level margin: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .\" new: \\n[rst2man-indent\\n[rst2man-indent-level]]
 .in \\n[rst2man-indent\\n[rst2man-indent-level]]u
 ..
-.TH "LINKCHECKERRC" "5" "September 11, 2023" "10.2.1.post89+g3a276cfc8" "LinkChecker"
+.TH "LINKCHECKERRC" "5" "December 04, 2023" "10.3.0.post33+g268799ee0" "LinkChecker"
 .SH NAME
 linkcheckerrc \- configuration file for LinkChecker
 .SH DESCRIPTION
@@ -228,8 +228,8 @@ your locale. Valid encodings are listed at
 Command line option: \fI\%\-\-output\fP
 .TP
 \fBverbose=\fP[\fB0\fP|\fB1\fP]
-If set log all checked URLs once. Default is to log only errors and
-warnings.
+If set log all checked URLs once, overriding \fBwarnings\fP\&.
+Default is to log only errors and warnings.
 Command line option: \fI\%\-\-verbose\fP
 .TP
 \fBwarnings=\fP[\fB0\fP|\fB1\fP]
