--- a/doc/changelog.txt
+++ b/doc/changelog.txt
@@ -1,3 +1,19 @@
+10.4.0 (released 11.12.2023)
+
+Features:
+- FIFOs can be used with --config and --cookiefile
+
+Changes:
+- Minimum Python version required is 3.9
+- ms-windows-store added to the list of ignored schemes
+- linkchecker will exit if problems with a configuration file or cookie file
+  are detected on startup
+
+Fixes
+- A cookie file that could not be parsed was causing an exception
+- Documentation updates
+
+
 10.3.0 (released 18.09.2023)
 
 Features:
