--- a/doc/man/en/linkcheckerrc.5
+++ b/doc/man/en/linkcheckerrc.5
@@ -127,6 +127,11 @@ To use values greater than 10, the HTTP server must return a
 The default is 10.
 Command line option: none
 .TP
+\fignoreddosprotection=\fP[\fB0\fP|\fB1\fP]
+Ignore the internal DDOS protection which limits the maximum number of requests
+to 6 per second.
+Use with caution!
+.TP
 \fBrobotstxt=\fP[\fB0\fP|\fB1\fP]
 When using http, fetch robots.txt, and confirm whether each URL should
 be accessed before checking.
